--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 flask
+requests
 google-generativeai
 diffusers==0.22.1
 transformers
@@ -6,10 +7,10 @@ accelerate
 hf_xet
 torch
 numpy
-pandas
+#pandas
 scipy 
 ftfy 
 gunicorn
-torchvision 
-torchaudio --extra-index-url https://download.pytorch.org/whl/cpu
-pillow
+#torchvision 
+#torchaudio --extra-index-url https://download.pytorch.org/whl/cpu
+#pillow
