--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ flask
 requests
 google-generativeai
 gunicorn
+
 #numpy
 #pandas
 #diffusers==0.22.1
@@ -14,3 +15,12 @@ gunicorn
 #torchvision 
 #torchaudio --extra-index-url https://download.pytorch.org/whl/cpu
 #pillow
+
+#SpeechRecognition
+#pyaudio
+#pydub
+#ffmpeg-python
+#winget install ffmpeg
+
+joblib
+sentence_transformers
